 - [DS-223] Submission process show previous button in JSPUI also if the step is the first "visible" step
 - [DS-227] Values with double apos doesn't work in dropdown and list input type
 - [DS-259] Community/collection admin should not to be able to delete their admin group
 - [DS-261] Community Admin JSPUI: porting of the DS-228 patch

(Tim Donohue)
 - [DS-218] Cannot add/remove email subscriptions from Profile page in XMLUI
 - [DS-238] Move item function in xmlui
 - [DS-281] Invalid Link to "Go to DSpace Home" on Page Not Found (XMLUI)

(Tim Donohue / Andrea Bollini)
 - [DS-228] Community Admin XMLUI: Delegated Admins Patch

(Ben Bosman)
 - [DS-226] confirmation page of edit profile has an invalid link

(OhioLINK)
 - [DS-225] dc.description.provenance - public display

(Yin Yin Latt / Stuart Lewis)
 - [DS-205] Creative Commons - option to set legal jurisdiction

(Fabio Kepler / Steve Williams)
 - [DS-258] Item View Thumbnails not displaying in XMLUI

1.5.2 final
===========

(Graham Triggs)
 - Fixes for critical bugs identified by Findbugs

(Mark Diggory)
 - [DS-100] XMLUI OpenURL support contributed by the National Evolutionary Synthesis Center (NESCent) and @mire.
 - [DS-93]  Upgrade XMLUI to Cocoon 2.2
 - [DS-117] File uploads >=100KB lead to an error in the xmlui
 - [DS-154] Make a backup of the config dir on Ant update
 - [DS-155] Maven war plugin changes cause war to include libraries as well
 - [DS-183] XPDF support for filtering PDFs for text extraction/search authored by Larry Stone
 - [DS-185] bin files in DOS format
 
(Mark Wood)
 - [DS-2] [2002866] Return 404, not 200, when page Not Found
 - [DS-150] [2025998] Usage event (statistics) plugin hook
 - [DS-143] [2620307] 'ant init_configs' copies wrong dspace.cfg
 - [DS-41] Small JSP cleanups

(Mark Wood / Andrea Bollini)
- [DS-43] Manakin RSS feed generator cache timeout can't be adjusted - ID: 2593393

(Stuart Lewis)
 - [DS-4] [2057231] Refactor LDAPServlet to use Stackable Authentication