@@ -1,0 +1,27 @@
+# <schema>.<element>.(<qualifier|*>) = element oai_dc
+# you can map more then one metadata to the same oai_dc element, 
+# see for example (dc.contributor.editor, dc.contributor.advisor, etc.)
+dc.title.* = title
+dc.contributor.author = creator
+dc.contributor = contributor
+dc.contributor.editor = contributor
+dc.contributor.advisor = contributor
+dc.contributor.illustrator = contributor
+dc.contributor.other = contributor
+dc.date.* = date
+dc.description = description
+dc.description.abstract = description
+dc.description.sponsorship = description
+dc.description.statementofresponsibility = description
+dc.description.tableofcontents = description
+dc.description.uri = description
+dc.identifier.* = identifier
+dc.language.* = language
+dc.publisher.* = publisher
+dc.relation.* = relation
+dc.rights.* = rights
+dc.subject.* = subject
+dc.format.* = format
+dc.source.* = source
+dc.coverage.* = coverage
+dc.type.* = type
