@@ -54,6 +54,7 @@
  - [DS-227] Values with double apos doesn't work in dropdown and list input type
  - [DS-259] Community/collection admin should not to be able to delete their admin group
  - [DS-261] Community Admin JSPUI: porting of the DS-228 patch
+ - [DS-271] Make the OAI DC crosswalk configurable
 
 (Tim Donohue)
  - [DS-218] Cannot add/remove email subscriptions from Profile page in XMLUI
